--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:tailwind": "npx tailwindcss -i ./src/style/index.css -o ./src/style.css --watch"
   },
   "dependencies": {
+    "material-icons": "^1.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
