--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
+    "start:dev": "cross-env HOST=localhost webpack-dev-server --disableHostCheck true --open --hot --progress --config build/webpack.dev.conf.js",
     "build": "node build/build.js",
     "build:tailwind": "npx tailwindcss -i ./src/style/index.css -o ./src/style.css --watch"
   },
@@ -26,6 +27,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
